--- a/index.html
+++ b/index.html
@@ -132,9 +132,8 @@
                 </div>
             </div>
         
-            <nav class="flex nav-bar md:bg-transparent  py-6 space-x-4 w-full items-center absolute top-0 left-0">
-                <img src="./img/logo.svg" alt="logs" class="hidden h-[16px] px-6 md:inline-block">
-                <button class="text-xl text-emerald-700 md:hidden btns">
+            <nav class="flex nav-bar md:bg-transparent py-6 px-6 w-full md:w-3/5 items-center absolute top-0 left-0">
+                <button class="text-xl text-emerald-700 pb-2 md:hidden btns inline-block">
                     <span class="font-bold show">
                         <img src="./img/icon-hamburger.svg" class="w-[25px] inline-block" alt="">
                     </span>
@@ -142,11 +141,17 @@
                         <img src="./img/icon-close.svg" class="w-[25px] inline-block" alt="">
                     </span>
                 </button>
-                <div class="links hidden md:inline-block md:text-white space-x-3 lowercase pl-20 md:pl-0">
-                    <a href="#" class="font-bold text-sm hover:text-zinc-700 hover:border-b-black hover:border-b-2">home</a>
-                    <a href="#" class="font-bold text-sm hover:text-zinc-700 hover:border-b-black hover:border-b-2">shop</a>
-                    <a href="#about" class="font-bold text-sm hover:text-zinc-700 hover:border-b-black hover:border-b-2">about</a>
-                    <a href="#" class="font-bold text-sm hover:text-zinc-700 hover:border-b-black hover:border-b-2">contact</a>
+
+                    <div class="w-[72px] mx-auto md:mx-0">
+                        <img src="./img/logo.svg" alt="logs" class="md:pl-0 h-[16px] w-full inline-block">
+                    </div>
+                    
+
+                <div class="links hidden md:inline-block md:text-white md:space-x-3 space-x-2  md:pl-24 lowercase">
+                    <a href="#" class="font-bold md:text-sm text-kekere hover:text-zinc-700 hover:border-b-black hover:border-b-2">home</a>
+                    <a href="#" class="font-bold md:text-sm text-kekere hover:text-zinc-700 hover:border-b-black hover:border-b-2">shop</a>
+                    <a href="#about" class="font-bold md:text-sm text-kekere hover:text-zinc-700 hover:border-b-black hover:border-b-2">about</a>
+                    <a href="#" class="font-bold md:text-sm text-kekere hover:text-zinc-700 hover:border-b-black hover:border-b-2">contact</a>
                 </div>
             </nav>
         </div>
@@ -158,7 +163,7 @@
             <div class="md:w-1/3 h-full">
                 <img src="./img/image-about-dark.jpg" class="w-full h-full" alt="">
             </div>
-            <div id="about" class="bg-white p-10 md:w-2/3 h-full space-y-4 ">
+            <div id="about" class="bg-white md:p-10 p-5  md:w-2/3 h-full space-y-4 ">
                 <h2 class="text-xl uppercase  tracking-widest font-bold">
                     About our furniture
                 </h2>
